[package]
name = "cbf-repl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bdk_wallet = { version = "1.0.0-beta.4", features = ["rusqlite"] }
bdk_kyoto = { git = "https://github.com/ValuedMammal/bdk-kyoto", rev = "58c6ee90206d9527ae78b664533aba0d8f8d2cb4" }
tokio = { version = "1.37", default-features = false, features = ["rt-multi-thread", "macros", "io-std"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }