[package]
name = "cbf-repl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bdk_wallet = { version = "1.0.0-beta.5", features = ["rusqlite"] }
bdk_kyoto = { git = "https://github.com/ValuedMammal/bdk-kyoto", rev = "187130770104dc0c833d4f77de6b359aec07532d" }
tokio = { version = "1.37", default-features = false, features = ["rt-multi-thread", "macros", "io-std"] }

# Logging dependencies
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
tracing-appender = { version = "0.2" }